--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "mockery/mockery": "^1.4"
+        "mockery/mockery": "^1.4",
+      "ext-mysqli": "*"
     },
     "autoload": {
         "psr-4": {
